Added cursor pointer

--- a/app.ipynb
+++ b/app.ipynb
@@ -87,19 +87,10 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [16/Feb/2023 16:00:58] \"GET /predict?age=1&bmi=10&avg_glucose_level=10&gender=F&married=0&hypertension=1&heart_disease=1&work_type=S&smoking_status=S&residence_type=U HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:00:58] \"GET /static/output.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:01:01] \"GET /static/output.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:05:27] \"GET /predict?age=1&bmi=10&avg_glucose_level=10&gender=F&married=0&hypertension=1&heart_disease=1&work_type=S&smoking_status=S&residence_type=U HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:05:27] \"GET /static/output.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:05:30] \"GET /predict?age=1&bmi=10&avg_glucose_level=10&gender=F&married=0&hypertension=1&heart_disease=1&work_type=S&smoking_status=S&residence_type=U HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:05:30] \"GET /static/output.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:05:34] \"GET /predict?age=1&bmi=10&avg_glucose_level=10&gender=F&married=0&hypertension=1&heart_disease=1&work_type=S&smoking_status=S&residence_type=U HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:05:34] \"GET /static/output.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:05:36] \"GET /predict?age=1&bmi=10&avg_glucose_level=10&gender=F&married=0&hypertension=1&heart_disease=1&work_type=S&smoking_status=S&residence_type=U HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:05:36] \"GET /static/output.css HTTP/1.1\" 304 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:05:38] \"GET /predict?age=1&bmi=10&avg_glucose_level=10&gender=F&married=0&hypertension=1&heart_disease=1&work_type=S&smoking_status=S&residence_type=U HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [16/Feb/2023 16:05:38] \"GET /static/output.css HTTP/1.1\" 304 -\n"
+      "127.0.0.1 - - [16/Feb/2023 17:55:52] \"GET /predict HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [16/Feb/2023 17:55:52] \"GET /static/output.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [16/Feb/2023 17:56:41] \"GET /predict?age=89&bmi=26&avg_glucose_level=959&gender=M&married=1&hypertension=1&heart_disease=1&work_type=S&smoking_status=F&residence_type=U HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [16/Feb/2023 17:56:42] \"GET /static/output.css HTTP/1.1\" 304 -\n"
      ]
     }
    ],
