Ensured its gbr

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,9 +576,9 @@
      "output_type": "stream",
      "text": [
       "\u001b[94mTesting Data\u001b[0m\n",
-      "\u001b[92mLinear Regression\u001b[0m is the best model for the Testing Data.\n",
-      "MSE:  \u001b[92m0.049965083884116385\u001b[0m\n",
-      "MAE:  \u001b[92m0.0981108639850805\u001b[0m\n"
+      "\u001b[92mGradient Boosting\u001b[0m is the best model for the Testing Data.\n",
+      "MSE:  \u001b[92m0.04975322361931997\u001b[0m\n",
+      "MAE:  \u001b[92m0.08795272516168767\u001b[0m\n"
      ]
     },
     {
@@ -614,18 +614,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.051651</td>\n",
-       "      <td>0.092270</td>\n",
+       "      <td>0.051947</td>\n",
+       "      <td>0.091755</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gradient Boosting</th>\n",
-       "      <td>0.049991</td>\n",
-       "      <td>0.088170</td>\n",
+       "      <td>0.049753</td>\n",
+       "      <td>0.087953</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree</th>\n",
-       "      <td>0.098500</td>\n",
-       "      <td>0.098500</td>\n",
+       "      <td>0.094586</td>\n",
+       "      <td>0.094586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>K Neighbors</th>\n",
@@ -649,8 +649,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TheilSen</th>\n",
-       "      <td>0.058044</td>\n",
-       "      <td>0.058092</td>\n",
+       "      <td>0.058040</td>\n",
+       "      <td>0.058105</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -659,14 +659,14 @@
       "text/plain": [
        "                        mse       mae\n",
        "Linear Regression  0.049965  0.098111\n",
-       "Random Forest      0.051651  0.092270\n",
-       "Gradient Boosting  0.049991  0.088170\n",
-       "Decision Tree      0.098500  0.098500\n",
+       "Random Forest      0.051947  0.091755\n",
+       "Gradient Boosting  0.049753  0.087953\n",
+       "Decision Tree      0.094586  0.094586\n",
        "K Neighbors        0.056751  0.089106\n",
        "Ridge              0.049965  0.098099\n",
        "Lasso              0.054241  0.096983\n",
        "Elastic Net        0.051967  0.094233\n",
-       "TheilSen           0.058044  0.058092"
+       "TheilSen           0.058040  0.058105"
       ]
      },
      "metadata": {},
@@ -733,8 +733,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.006269</td>\n",
-       "      <td>0.031834</td>\n",
+       "      <td>0.006100</td>\n",
+       "      <td>0.031703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gradient Boosting</th>\n",
@@ -768,8 +768,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>TheilSen</th>\n",
-       "      <td>0.044721</td>\n",
-       "      <td>0.044768</td>\n",
+       "      <td>0.044717</td>\n",
+       "      <td>0.044782</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -778,14 +778,14 @@
       "text/plain": [
        "                        mse       mae\n",
        "Linear Regression  0.039310  0.087239\n",
-       "Random Forest      0.006269  0.031834\n",
+       "Random Forest      0.006100  0.031703\n",
        "Gradient Boosting  0.030024  0.067792\n",
        "Decision Tree      0.000000  0.000000\n",
        "K Neighbors        0.031770  0.063573\n",
        "Ridge              0.039310  0.087230\n",
        "Lasso              0.042259  0.084962\n",
        "Elastic Net        0.040673  0.083005\n",
-       "TheilSen           0.044721  0.044768"
+       "TheilSen           0.044717  0.044782"
       ]
      },
      "metadata": {},
@@ -842,18 +842,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>-0.045382</td>\n",
-       "      <td>-0.060436</td>\n",
+       "      <td>-0.045847</td>\n",
+       "      <td>-0.060052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Gradient Boosting</th>\n",
-       "      <td>-0.019968</td>\n",
-       "      <td>-0.020378</td>\n",
+       "      <td>-0.019730</td>\n",
+       "      <td>-0.020161</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Decision Tree</th>\n",
-       "      <td>-0.098500</td>\n",
-       "      <td>-0.098500</td>\n",
+       "      <td>-0.094586</td>\n",
+       "      <td>-0.094586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>K Neighbors</th>\n",
@@ -878,7 +878,7 @@
        "    <tr>\n",
        "      <th>TheilSen</th>\n",
        "      <td>-0.013323</td>\n",
-       "      <td>-0.013323</td>\n",
+       "      <td>-0.013322</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -887,14 +887,14 @@
       "text/plain": [
        "                   mse difference  mae difference\n",
        "Linear Regression       -0.010655       -0.010872\n",
-       "Random Forest           -0.045382       -0.060436\n",
-       "Gradient Boosting       -0.019968       -0.020378\n",
-       "Decision Tree           -0.098500       -0.098500\n",
+       "Random Forest           -0.045847       -0.060052\n",
+       "Gradient Boosting       -0.019730       -0.020161\n",
+       "Decision Tree           -0.094586       -0.094586\n",
        "K Neighbors             -0.024982       -0.025534\n",
        "Ridge                   -0.010655       -0.010870\n",
        "Lasso                   -0.011982       -0.012021\n",
        "Elastic Net             -0.011294       -0.011228\n",
-       "TheilSen                -0.013323       -0.013323"
+       "TheilSen                -0.013323       -0.013322"
       ]
      },
      "metadata": {},
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
